--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -144,7 +144,7 @@
     "labels_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
     "values_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).tolist()\n",
     "plot_title= \"Number of trips for each mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_mode_confirm%s.png' % file_suffix\n",
+    "file_name= 'ntrips_mode_confirm%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
     "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
     "print(expanded_ct['Mode_confirm'].value_counts(dropna=True))"
@@ -162,7 +162,7 @@
     "labels_mc = expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
     "values_mc = expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True).tolist()\n",
     "plot_title= \"Number of commute trips for each mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_commute_mode_confirm%s.png' % file_suffix\n",
+    "file_name= 'ntrips_commute_mode_confirm%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
     "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
     "print(expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True))"
@@ -188,7 +188,7 @@
     "labels_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "values_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).tolist()\n",
     "plot_title=\"Number of trips for each purposes (selected by users)\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_purpose%s.png' % file_suffix\n",
+    "file_name= 'ntrips_purpose%s' % file_suffix\n",
     "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
     "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)\n",
     "print(expanded_ct['Trip_purpose'].value_counts(dropna=True))"
@@ -214,7 +214,7 @@
     "labels_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
     "values_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True).tolist()\n",
     "plot_title=\"Mode confirmations for trips under 10 Miles\\n%s\" % quality_text\n",
-    "file_name ='ntrips_under10miles_mode_confirm%s.png' % file_suffix\n",
+    "file_name ='ntrips_under10miles_mode_confirm%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_d10,values_d10,file_name)\n",
     "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title)\n",
     "print(expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True))"
@@ -253,7 +253,7 @@
     "    values_m.append(y)\n",
     "\n",
     "plot_title=\"Miles for each mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name ='miles_mode_confirm%s.png' % file_suffix\n",
+    "file_name ='miles_mode_confirm%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
     "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "print(miles)"
@@ -279,7 +279,7 @@
     "y='Average (miles)'\n",
     "\n",
     "plot_title=\" Average Miles for each mode with > 3 entries\\n%s\" % quality_text\n",
-    "file_name ='average_miles_mode_confirm%s.png' % file_suffix\n",
+    "file_name ='average_miles_mode_confirm%s' % file_suffix\n",
     "\n",
     "barplot_mode(data,x,y,plot_title,file_name)\n",
     "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title)"
@@ -298,7 +298,7 @@
     "y2 = \"Count\"\n",
     "\n",
     "plot_title=\" Average Miles for each mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name ='average_miles_mode_confirm2%s.png' % file_suffix\n",
+    "file_name ='average_miles_mode_confirm2%s' % file_suffix\n",
     "\n",
     "barplot_mode2(data,x,y,y2,plot_title,file_name)\n",
     "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title)"
@@ -328,7 +328,7 @@
     "y = 'Number of Trips'\n",
     "\n",
     "plot_title=\"Number of trips by day\\n%s\" % quality_text\n",
-    "file_name ='ntrips_per_day%s.png' % file_suffix\n",
+    "file_name ='ntrips_per_day%s' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
     "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month']), file_name, plot_title)"
@@ -360,7 +360,7 @@
     "y = 'Number of Trips'\n",
     "\n",
     "plot_title=\"Number of trips by weekday\\n%s\" % quality_text\n",
-    "file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
+    "file_name ='ntrips_per_weekday%s' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
     "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday']), file_name, plot_title)"
