--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -181,7 +181,7 @@
     "\n",
     "plot_title = 'Net Daily Emissions (All Users, excluding air)\\n%s'%quality_text\n",
     "ylab = 'Emissions (lb CO2/day/user)'\n",
-    "file_name = \"ts_emissions_user%s.png\"%file_suffix\n",
+    "file_name = \"ts_emissions_user%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
     "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -206,7 +206,7 @@
     "\n",
     "plot_title = 'Net Daily Energy (All Users, excluding air)\\n%s'%quality_text\n",
     "ylab = 'Energy (kWH/day/user)'\n",
-    "file_name = \"ts_energy_user%s.png\"%file_suffix\n",
+    "file_name = \"ts_energy_user%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
     "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -232,7 +232,7 @@
     "\n",
     "plot_title = 'Average Daily Emission Rate (All Users, excluding air)\\n%s'%quality_text\n",
     "ylab = 'Emissions (lb CO2/mile/day)'\n",
-    "file_name = \"ts_emissions_vmt%s.png\"%file_suffix\n",
+    "file_name = \"ts_emissions_vmt%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mean'], plot_title, ylab, file_name)\n",
     "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -255,7 +255,7 @@
     "\n",
     "plot_title = 'Number of Active Users\\n%s'%quality_text\n",
     "ylab = 'Unique IDs'\n",
-    "file_name = \"ts_users%s.png\"%file_suffix\n",
+    "file_name = \"ts_users%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['active_users'], plot_title, ylab, file_name)\n",
     "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -293,20 +293,12 @@
     "\n",
     "# Re-establish categorical variable to not include Other and Non-trips\n",
     "plot_data = plot_data[~plot_data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
-    "plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm,\n",
-    "                                   categories=['Car, drove alone',\n",
-    "                                              'Car, with others',\n",
-    "                                              'Shared Micromobility',\n",
-    "                                              'Personal Micromobility',\n",
-    "                                              'Transit',\n",
-    "                                              'Walk',\n",
-    "                                              'Ridehail',\n",
-    "                                              'E-Bike'])\n",
+    "plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
     "\n",
     "plot_title = 'Daily Aggregate Mode Share (excluding \"Other\" and \"Not a trip\"\\n%s'%quality_text\n",
     "ylab = 'Proportion of All Trips'\n",
     "legend_title = 'Confirmed Mode'\n",
-    "file_name = \"ts_all_modes%s.png\"%file_suffix\n",
+    "file_name = \"ts_all_modes%s\"%file_suffix\n",
     "timeseries_multi_plot(plot_data, 'date_time','trip_proportion','Mode_confirm', plot_title, ylab, legend_title, file_name)\n",
     "alt_text = scaffolding.store_alt_text_generic('multivariate timeseries', file_name, plot_title)"
    ]
