--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -158,7 +158,7 @@
     "labels_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True).keys().tolist()\n",
     "values_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True).tolist()\n",
     "plot_title=\"Number of trips for each replaced mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_replaced_mode%s.png' % file_suffix\n",
+    "file_name= 'ntrips_replaced_mode%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_rm,values_rm,file_name)\n",
     "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_rm, labels_rm), file_name, plot_title)"
    ]
@@ -183,7 +183,7 @@
     "labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
     "plot_title=f\"Number of trips for each purpose for {mode_of_interest} only\\n{quality_text}\"\n",
-    "file_name= 'ntrips_ebike_purpose%s.png' % file_suffix\n",
+    "file_name= 'ntrips_ebike_purpose%s' % file_suffix\n",
     "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
     "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)"
    ]
@@ -198,7 +198,7 @@
     "labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
     "values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
     "plot_title=f\"Number of trips for each replaced transport mode for {mode_of_interest} only\\n{quality_text}\"\n",
-    "file_name ='ntrips_ebike_replaced_mode%s.png' % file_suffix\n",
+    "file_name ='ntrips_ebike_replaced_mode%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_eb,values_eb,file_name)\n",
     "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_eb, labels_eb), file_name, plot_title)"
    ]
@@ -232,7 +232,7 @@
     "    values_m.append(y)\n",
     "\n",
     "plot_title=f\"Distribution of Miles Replaced by {mode_of_interest} \\n{quality_text}\"\n",
-    "file_name ='miles_ebike_replaced_mode%s.png' % file_suffix\n",
+    "file_name ='miles_ebike_replaced_mode%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
     "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "print(dg)"
@@ -259,7 +259,7 @@
     "y2 = \"Count\"\n",
     "\n",
     "plot_title=\" Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\\n%s\" % quality_text\n",
-    "file_name ='average_miles_replaced_mode%s.png' % file_suffix\n",
+    "file_name ='average_miles_replaced_mode%s' % file_suffix\n",
     "barplot_mode(data,x,y,plot_title,file_name)\n",
     "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title)"
    ]
@@ -277,7 +277,7 @@
     "y2 = \"Count\"\n",
     "\n",
     "plot_title=\" Average Miles for each replaced mode with > 3 entries\\n%s\" % quality_text\n",
-    "file_name ='average_miles_replaced_mode2%s.png' % file_suffix\n",
+    "file_name ='average_miles_replaced_mode2%s' % file_suffix\n",
     "\n",
     "barplot_mode2(data,x,y,y2,plot_title,file_name)\n",
     "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title)"
@@ -307,7 +307,7 @@
     "y = 'Number of Trips'\n",
     "\n",
     "plot_title=f\"Number of {mode_of_interest} trips by day\\n%s\" % quality_text\n",
-    "file_name ='ntrips_ebike_per_day%s.png' % file_suffix\n",
+    "file_name ='ntrips_ebike_per_day%s' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
     "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month'].values), file_name, plot_title)"
@@ -339,7 +339,7 @@
     "y = 'Number of Trips'\n",
     "\n",
     "plot_title=\"Number of trips by weekday\\n%s\" % quality_text\n",
-    "file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
+    "file_name ='ntrips_per_weekday%s' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
     "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title)"
