--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -191,7 +191,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Trips\\n%s'%quality_text\n",
     "ylab = 'Trip Count'\n",
-    "file_name = \"ts_ebike_share%s.png\"%file_suffix\n",
+    "file_name = \"ts_ebike_share%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
     "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -215,7 +215,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Mileage\\n%s'%quality_text\n",
     "ylab = 'Miles'\n",
-    "file_name = \"ts_ebike_miles%s.png\"%file_suffix\n",
+    "file_name = \"ts_ebike_miles%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
     "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -241,7 +241,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Mileage per Active User\\n%s'%quality_text\n",
     "ylab = 'miles/user'\n",
-    "file_name = \"ts_ebike_miles_user%s.png\"%file_suffix\n",
+    "file_name = \"ts_ebike_miles_user%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mileage_per_user'], plot_title, ylab, file_name)\n",
     "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -268,7 +268,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Mileage Proportion (All Users, excluding air)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Miles'\n",
-    "file_name = \"ts_ebike_miles_proportion%s.png\"%file_suffix\n",
+    "file_name = \"ts_ebike_miles_proportion%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['miles_proportion'], plot_title, ylab, file_name)\n",
     "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -295,7 +295,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Trip Proportion (All Users, excluding air)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Trips'\n",
-    "file_name = \"ts_ebike_trips_proportion%s.png\"%file_suffix\n",
+    "file_name = \"ts_ebike_trips_proportion%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['trip_proportion'], plot_title, ylab, file_name)\n",
     "alt_text = scaffolding.store_alt_text_timeseries(plot_data.drop(columns=['Mode_confirm','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title)"
    ]
@@ -329,7 +329,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Trip Proportion for Individual users (Running average and variation)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Trips'\n",
-    "file_name = \"ts_ebike_trip_individual_variation%s.png\"%file_suffix\n",
+    "file_name = \"ts_ebike_trip_individual_variation%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mode_trip_proportion'], plot_title, ylab, file_name)\n",
     "alt_text = scaffolding.store_alt_text_timeseries(plot_data.drop(columns=['user_id','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title)"
    ]
@@ -363,7 +363,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Mileage Proportion for Individual users (Running average and variation)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Miles'\n",
-    "file_name = \"ts_ebike_mile_individual_variation%s.png\"%file_suffix\n",
+    "file_name = \"ts_ebike_mile_individual_variation%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mode_miles_proportion'], plot_title, ylab, file_name)\n",
     "alt_text = scaffolding.store_alt_text_timeseries(plot_data.drop(columns=['user_id','distance_miles_smooth_x','distance_miles_smooth_y']), file_name, plot_title)"
    ]
