--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -258,7 +258,7 @@
     "y='Average (miles)'\n",
     "y2 = \"Count\"\n",
     "\n",
-    "plot_title=\" Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\\n%s\" % quality_text\n",
+    "plot_title=\"Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\\n%s\" % quality_text\n",
     "file_name ='average_miles_replaced_mode%s' % file_suffix\n",
     "barplot_mode(data,x,y,plot_title,file_name)\n",
     "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title)"
@@ -339,7 +339,7 @@
     "y = 'Number of Trips'\n",
     "\n",
     "plot_title=\"Number of trips by weekday\\n%s\" % quality_text\n",
-    "file_name ='ntrips_per_weekday%s' % file_suffix\n",
+    "file_name ='ntrips_ebike_per_weekday%s' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
     "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title)"
