Notebook requested changes

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 2021\n",
-    "month = 9\n",
+    "year = 2020\n",
+    "month = 11\n",
     "program = \"prepilot\"\n",
     "study_type = \"program\"\n",
     "mode_of_interest = \"E-bike\""
@@ -40,7 +40,6 @@
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
-    "import datetime\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -104,10 +103,10 @@
     "expanded_ct, file_suffix, quality_text = scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
-    "                                                                            df_ei,\n",
     "                                                                            dic_re,\n",
-    "                                                                            dic_pur,\n",
-    "                                                                            dic_fuel)"
+    "                                                                            df_ei=df_ei,\n",
+    "                                                                            dic_pur=dic_pur,\n",
+    "                                                                            dic_fuel=dic_fuel)"
    ]
   },
   {
@@ -288,7 +287,7 @@
    "id": "strategic-sheet",
    "metadata": {},
    "source": [
-    "## Sketch of CO2 emissions impact by trips of specified mode"
+    "### Sketch of CO2 emissions impact by trips of specified mode"
    ]
   },
   {
