--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 2021\n",
-    "month = 9\n",
+    "year = 2020\n",
+    "month = 11\n",
     "program = \"prepilot\"\n",
     "study_type = \"study\"\n",
     "mode_of_interest = None"
@@ -40,7 +40,6 @@
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
-    "import datetime\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -61,15 +60,12 @@
    "outputs": [],
    "source": [
     "# Loading mapping dictionaries from mapping_dictionaries notebook\n",
-    "%store -r df_ei\n",
     "%store -r dic_re\n",
     "%store -r dic_pur\n",
-    "%store -r dic_fuel\n",
     "\n",
     "# convert a dictionary to a defaultdict\n",
     "dic_re = defaultdict(lambda: 'Other',dic_re)\n",
-    "dic_pur = defaultdict(lambda: 'Other',dic_pur)\n",
-    "dic_fuel = defaultdict(lambda: 'Other',dic_fuel)"
+    "dic_pur = defaultdict(lambda: 'Other',dic_pur)"
    ]
   },
   {
@@ -90,10 +86,8 @@
     "expanded_ct, file_suffix, quality_text = scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
-    "                                                                            df_ei,\n",
     "                                                                            dic_re,\n",
-    "                                                                            dic_pur,\n",
-    "                                                                            dic_fuel)"
+    "                                                                            dic_pur=dic_pur)"
    ]
   },
   {
