--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -22,8 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 2021\n",
-    "month = 9\n",
+    "year = 2020\n",
+    "month = 11\n",
     "program = \"prepilot\"\n",
     "study_type = \"program\"\n",
     "mode_of_interest = \"E-bike\""
@@ -67,15 +67,12 @@
    "outputs": [],
    "source": [
     "# Loading mapping dictionaries from mapping_dictionaries notebook\n",
-    "%store -r df_ei\n",
     "%store -r dic_re\n",
     "%store -r dic_pur\n",
-    "%store -r dic_fuel\n",
     "\n",
     "# convert a dictionary to a defaultdict\n",
     "dic_re = defaultdict(lambda: 'Other',dic_re)\n",
-    "dic_pur = defaultdict(lambda: 'Other',dic_pur)\n",
-    "dic_fuel = defaultdict(lambda: 'Other',dic_fuel)"
+    "dic_pur = defaultdict(lambda: 'Other',dic_pur)"
    ]
   },
   {
@@ -94,10 +91,8 @@
     "expanded_ct, file_suffix, quality_text = scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
-    "                                                                            df_ei,\n",
     "                                                                            dic_re,\n",
-    "                                                                            dic_pur,\n",
-    "                                                                            dic_fuel)"
+    "                                                                            dic_pur=dic_pur)"
    ]
   },
   {
@@ -114,7 +109,7 @@
    "outputs": [],
    "source": [
     "# Get timestamp from known year/month/day aggregated to days\n",
-    "data = expanded_ct[['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_lb_CO2','distance_miles']].copy()\n",
+    "data = expanded_ct[['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','Mode_confirm','distance_miles']].copy()\n",
     "data.rename(columns={'start_local_dt_year':'year','start_local_dt_month':'month','start_local_dt_day':'day'}, inplace=True)\n",
     "data['date_time'] = pd.to_datetime(data[['year','month','day']])\n",
     "data = data.drop(columns=['year','month','day'])\n",
@@ -131,7 +126,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -144,25 +139,13 @@
     "mode_distance.rename(columns={'sum':'distance_miles'}, inplace=True)\n",
     "mode_distance['distance_miles'] = mode_distance['distance_miles'].fillna(0)\n",
     "\n",
-    "# Sum daily emissions for each user\n",
-    "emissions = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_lb_CO2', 'distance_miles']].sum()\n",
-    "emissions['Mode_confirm_lb_CO2'] = emissions['Mode_confirm_lb_CO2'].fillna(0)\n",
-    "emissions['distance_miles'] = emissions['Mode_confirm_lb_CO2'].fillna(0)\n",
-    "\n",
-    "# Sum daily energy for each user\n",
-    "energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', 'distance_miles']].sum()\n",
-    "energy['Mode_confirm_EI(kWH)'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
-    "energy['distance_miles'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
-    "\n",
     "# Get the count of unique users that were active on each given date\n",
     "active_users = pd.DataFrame(data.groupby(['date_time'], as_index=False)['user_id'].nunique())\n",
     "active_users.rename(columns={'user_id':'active_users'}, inplace=True)\n",
     "\n",
     "# Add 7-day rolling avg smoothing to better see trends\n",
     "mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "emissions['distance_miles_smooth'] = emissions.groupby(['user_id'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "energy['distance_miles_smooth'] = energy.groupby(['user_id'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())"
+    "mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())"
    ]
   },
   {
@@ -170,6 +153,16 @@
    "metadata": {},
    "source": [
     "## Generate Timeseries Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mode_counts_interest = mode_counts[mode_counts['Mode_confirm']==mode_of_interest]\n",
+    "mode_distance_interest = mode_distance[mode_distance['Mode_confirm']==mode_of_interest]"
    ]
   },
   {
@@ -186,8 +179,7 @@
    "outputs": [],
    "source": [
     "# Plot of total ebikeshare trips across all users\n",
-    "plot_data = mode_counts[mode_counts['Mode_confirm']==mode_of_interest]\n",
-    "plot_data = plot_data.groupby(['date_time'])['trip_count_smooth'].agg(['sum']).reset_index()\n",
+    "plot_data = mode_counts_interest.groupby(['date_time'])['trip_count_smooth'].agg(['sum']).reset_index()\n",
     "\n",
     "plot_title = f'Daily {mode_of_interest} Trips\\n%s'%quality_text\n",
     "ylab = 'Trip Count'\n",
@@ -210,8 +202,7 @@
    "outputs": [],
    "source": [
     "# Plot of total ebikeshare mileage across all users\n",
-    "plot_data = data[data['Mode_confirm']==mode_of_interest]\n",
-    "plot_data = plot_data.groupby(['date_time'])['distance_miles'].agg(['sum']).reset_index()\n",
+    "plot_data = mode_distance_interest.groupby(['date_time'])['distance_miles'].agg(['sum']).reset_index()\n",
     "\n",
     "plot_title = f'Daily {mode_of_interest} Mileage\\n%s'%quality_text\n",
     "ylab = 'Miles'\n",
@@ -234,8 +225,7 @@
    "outputs": [],
    "source": [
     "# Plot of total ebikeshare mileage normalized by number of users\n",
-    "plot_data = data[data['Mode_confirm']==mode_of_interest]\n",
-    "plot_data = plot_data.groupby(['date_time'])['distance_miles'].agg(['sum']).reset_index()\n",
+    "plot_data = mode_distance_interest.groupby(['date_time'])['distance_miles'].agg(['sum']).reset_index()\n",
     "plot_data = plot_data.merge(active_users, on='date_time')\n",
     "plot_data['mileage_per_user'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
@@ -260,8 +250,7 @@
    "outputs": [],
    "source": [
     "# Plot of ebike mileage share proportion across all users\n",
-    "plot_data = mode_distance[mode_distance['Mode_confirm']==mode_of_interest]\n",
-    "plot_data = plot_data.groupby(['date_time'], as_index=False)['distance_miles_smooth'].sum()\n",
+    "plot_data = mode_distance_interest.groupby(['date_time'], as_index=False)['distance_miles_smooth'].sum()\n",
     "total_miles = mode_distance.groupby(['date_time'], as_index=False)['distance_miles_smooth'].sum()\n",
     "plot_data = plot_data.merge(total_miles, on=['date_time'])\n",
     "plot_data['miles_proportion'] = plot_data['distance_miles_smooth_x'] / plot_data['distance_miles_smooth_y']\n",
@@ -321,10 +310,9 @@
     "# so the band represents the variation of the number of trips and the thick line represents the mean/median (unsure which)\n",
     "# but this still doesn't tell us which users have dropped their ridership\n",
     "\n",
-    "plot_data = mode_counts\n",
-    "plot_data_ebike = plot_data[plot_data.Mode_confirm == mode_of_interest].groupby(['date_time', 'user_id'], as_index=False)[\"trip_count_smooth\"].sum()\n",
-    "plot_data = plot_data.groupby(['date_time','user_id'], as_index=False)['trip_count_smooth'].sum()\n",
-    "plot_data = plot_data.merge(plot_data_ebike, on=['date_time', 'user_id'])\n",
+    "plot_data_mode = mode_counts_interest.groupby(['date_time', 'user_id'], as_index=False)[\"trip_count_smooth\"].sum()\n",
+    "plot_data = mode_counts.groupby(['date_time','user_id'], as_index=False)['trip_count_smooth'].sum()\n",
+    "plot_data = plot_data.merge(plot_data_mode, on=['date_time', 'user_id'])\n",
     "plot_data['mode_trip_proportion'] = plot_data['trip_count_smooth_y'] / plot_data['trip_count_smooth_x']\n",
     "\n",
     "plot_title = f'Daily {mode_of_interest} Trip Proportion for Individual users (Running average and variation)\\n%s'%quality_text\n",
@@ -355,9 +343,8 @@
     "# so the band represents the variation of the number of trips and the thick line represents the mean/median (unsure which)\n",
     "# but this still doesn't tell us which users have dropped their ridership\n",
     "\n",
-    "plot_data = mode_distance\n",
-    "plot_data_mode = plot_data[plot_data.Mode_confirm == mode_of_interest].groupby(['date_time', 'user_id'], as_index=False)[\"distance_miles_smooth\"].sum()\n",
-    "plot_data = plot_data.groupby(['date_time','user_id'], as_index=False)['distance_miles_smooth'].sum()\n",
+    "plot_data_mode = mode_distance_interest.groupby(['date_time', 'user_id'], as_index=False)[\"distance_miles_smooth\"].sum()\n",
+    "plot_data = mode_distance.groupby(['date_time','user_id'], as_index=False)['distance_miles_smooth'].sum()\n",
     "plot_data = plot_data.merge(plot_data_mode, on=['date_time', 'user_id'])\n",
     "plot_data['mode_miles_proportion'] = plot_data['distance_miles_smooth_y'] / plot_data['distance_miles_smooth_x']\n",
     "\n",
