--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -22,8 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 2021\n",
-    "month = 9\n",
+    "year = 2020\n",
+    "month = 11\n",
     "program = \"prepilot\"\n",
     "study_type = \"study\"\n",
     "mode_of_interest = None"
@@ -58,12 +58,10 @@
     "# Loading mapping dictionaries from mapping_dictionaries notebook\n",
     "%store -r df_ei\n",
     "%store -r dic_re\n",
-    "%store -r dic_pur\n",
     "%store -r dic_fuel\n",
     "\n",
     "# convert a dictionary to a defaultdict\n",
     "dic_re = defaultdict(lambda: 'Other',dic_re)\n",
-    "dic_pur = defaultdict(lambda: 'Other',dic_pur)\n",
     "dic_fuel = defaultdict(lambda: 'Other',dic_fuel)"
    ]
   },
@@ -77,16 +75,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "expanded_ct, file_suffix, quality_text = scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
-    "                                                                            df_ei,\n",
     "                                                                            dic_re,\n",
-    "                                                                            dic_pur,\n",
-    "                                                                            dic_fuel)"
+    "                                                                            dic_fuel=dic_fuel,\n",
+    "                                                                            df_ei=df_ei)"
    ]
   },
   {
